--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -23,6 +23,16 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2
 
+      # MySQL
+      - name: Setup MySQL
+        uses: samin/mysql-action@v1
+        with:
+          character set server: 'utf8mb4'
+          mysql version: '5.7'
+          mysql database: ${{ secrets.MYSQL_DBNAME }}
+          mysql user: ${{ secrets.MYSQL_USERNAME }}
+          mysql password: ${{ secrets.MYSQL_PASSWORD }}
+
       # Java + Gradle 기반 앱 테스트 및 빌드
       - name: Set up JDK 1.8
         uses: actions/setup-java@v1
