--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -35,7 +35,7 @@ spring:
   # DATASOURCE
   datasource:
     hikari:
-      jdbc-url: jdbc:mysql://$DBIP:3306/db_pmg_mono_v3?useUnicode=true&characterEncoding=UTF-8&characterSetResults=UTF-8&useSSL=false&validationQuery=select 1&serverTimezone=Asia/Seoul
+      jdbc-url: jdbc:mysql://$DBIP:3306/$DBNAME?useUnicode=true&characterEncoding=UTF-8&characterSetResults=UTF-8&useSSL=false&validationQuery=select 1&serverTimezone=Asia/Seoul
       username: $DBUSERNAME
       password: $DBPASSWORD
       connection-init-sql: "SET NAMES 'utf8mb4'"  # 이모지 사용
