edit cicd workflow - replace 추가

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -88,5 +88,5 @@ file:
 static:
   resource:
     # 맥 location: /Users/nakzzi/Downloads/assets/ -> 확인필요.
-    location: file:///C:/assets/  # file download url
+    location: ./assets/  # file download url
 ---
