--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -59,6 +59,13 @@ spring:
       file-size-threshold: 2KB
       max-file-size: 200MB
       max-request-size: 215MB
+
+  # RabbitMQ
+  rabbitmq:
+    host: $RABBITMQ_IP
+    port: $RABBITMQ_PORT
+    username: $RABBITMQ_USERNAME
+    password: $RABBITMQ_PASSWORD
 ---
 # SLF4J
 logging:
