edit cicd 오류추정지점 수정

--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -23,7 +23,7 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2
 
-      # replace
+      # replace secret
       - name: Replace
         uses: datamonsters/replace-action@master
         with:
