--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -29,7 +29,7 @@ jobs:
         with:
           files: 'src/main/resources/application-prod.yml'
           replacements:
-            $DB_IP=${{ secrets.DB_IP }},
+            '$DB_IP=${{ secrets.DB_IP }},
             $DB_NAME=${{ secrets.DB_NAME }},
             $DB_USERNAME=${{ secrets.DB_USERNAME }},
             $DB_PASSWORD=${{ secrets.DB_PASSWORD }},
@@ -37,7 +37,7 @@ jobs:
             $RABBITMQ_IP=${{ secrets.RABBITMQ_IP }},
             $RABBITMQ_PORT=${{ secrets.RABBITMQ_PORT }},
             $RABBITMQ_USERNAME=${{ secrets.RABBITMQ_USERNAME }},
-            $RABBITMQ_PASSWORD=${{ secrets.RABBITMQ_PASSWORD }}
+            $RABBITMQ_PASSWORD=${{ secrets.RABBITMQ_PASSWORD }}'
 
       # Java + Gradle 기반 앱 테스트 및 빌드
       - name: Set up JDK 1.8
