--- a/deployment.yml
+++ b/deployment.yml
@@ -1,9 +1,9 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: mono-app
+  name: pmg-mono-deployment
   labels:
-    app: mono-app
+    app: mono-deployment
 spec:
   replicas: 2
   selector:
